--- a/introduction.html
+++ b/introduction.html
@@ -3,13 +3,13 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Introduction - Learn You a Haskell for Great Good!</title>
 
-    <!--<base href="http://haskell.or.kr/">--><base href=".">
+    <!--<base href="./">--><base href=".">
     <style type="text/css">
       @import url('reset.css');
       @import url('style.css');
     </style>
-    <link rel="shortcut icon" href="http://haskell.or.kr/favicon.png" type="image/png">
-    <link rel="next" href="http://haskell.or.kr/starting-out">
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
+    <link rel="next" href="./starting-out.html">
     <link type="text/css" rel="stylesheet" href="./files/SyntaxHighlighter.css">
     <body class="introcontent">
       <div class="bgwrapper">
@@ -19,10 +19,10 @@
               <li style="text-align:left">
               </li>
               <li style="text-align:center">
-                <a href="http://haskell.or.kr/chapters.html">Table of contents</a>
+                <a href="./chapters.html">Table of contents</a>
               </li>
               <li style="text-align:right">
-                <a href="http://haskell.or.kr/starting-out.html" class="nxtlink">Starting Out</a>
+                <a href="./starting-out.html" class="nxtlink">Starting Out</a>
               </li>
             </ul>
           </div>
@@ -78,10 +78,10 @@
               <li style="text-align:left">
               </li>
               <li style="text-align:center">
-                <a href="http://haskell.or.kr/chapters.html">Table of contents</a>
+                <a href="./chapters.html">Table of contents</a>
               </li>
               <li style="text-align:right">
-                <a href="http://haskell.or.kr/starting-out.html" class="nxtlink">Starting Out</a>
+                <a href="./starting-out.html" class="nxtlink">Starting Out</a>
               </li>
             </ul>
           </div>
