--- a/starting-out.html
+++ b/starting-out.html
@@ -8,9 +8,9 @@
       @import url('reset.css');
       @import url('style.css');
     </style>
-    <link rel="shortcut icon" href="http://haskell.or.kr/favicon.png" type="image/png">
-    <link rel="prev" href="http://haskell.or.kr/introduction">
-    <link rel="next" href="http://haskell.or.kr/types-and-typeclasses">
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
+    <link rel="prev" href="./introduction.html">
+    <link rel="next" href="./types-and-typeclasses.html">
     <link type="text/css" rel="stylesheet" href="./files/SyntaxHighlighter.css">
     <body class="introcontent">
       <div class="bgwrapper">
@@ -18,13 +18,13 @@
           <div class="footdiv" style="margin-bottom:25px;">
             <ul>
               <li style="text-align:left">
-                <a href="http://haskell.or.kr/introduction.html" class="prevlink">Introduction</a>
+                <a href="./introduction.html" class="prevlink">Introduction</a>
               </li>
               <li style="text-align:center">
-                <a href="http://haskell.or.kr/chapters.html">Table of contents</a>
+                <a href="./chapters.html">Table of contents</a>
               </li>
               <li style="text-align:right">
-                <a href="http://haskell.or.kr/types-and-typeclasses.html" class="nxtlink">Types and Typeclasses</a>
+                <a href="./types-and-typeclasses.html" class="nxtlink">Types and Typeclasses</a>
               </li>
             </ul>
           </div>
@@ -601,13 +601,13 @@ ghci&gt; rightTriangles'
           <div class="footdiv">
             <ul>
               <li style="text-align:left">
-                <a href="http://haskell.or.kr/introduction" class="prevlink">Introduction</a>
+                <a href="./introduction.html" class="prevlink">Introduction</a>
               </li>
               <li style="text-align:center">
-                <a href="http://haskell.or.kr/chapters">Table of contents</a>
+                <a href="./chapters.html">Table of contents</a>
               </li>
               <li style="text-align:right">
-                <a href="http://haskell.or.kr/types-and-typeclasses" class="nxtlink">Types and Typeclasses</a>
+                <a href="./types-and-typeclasses.html" class="nxtlink">Types and Typeclasses</a>
               </li>
             </ul>
           </div>
