--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h3>
-      <a href="http://haskell.or.kr/chapters.html">Learn You a Haskell for a Great Good 한글화</a> - <a href="mailto:jungnam.lee@kaist.ac.kr">이정남</a>, <a href="mailto:joonsoo@giyeok.com">전준수</a>
+      공사중<br/>
+      <a href="http://haskell.or.kr/chapters.html">Learn You a Haskell for a Great Good 한글화</a> - 이정남, 전준수
     </h3>
   </body>
 </html>
