--- a/recursion.html
+++ b/recursion.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0037)http://learnyouahaskell.com/recursion -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Recursion - Learn You a Haskell for Great Good!</title>
 
-<!--<base href="http://learnyouahaskell.com/">--><base href=".">
+<base href=".">
 <style type="text/css">
 	@import url('reset.css');
 	@import url('style.css');
 </style>
-<link rel="shortcut icon" href="http://learnyouahaskell.com/favicon.png" type="image/png">
-        <link rel="prev" href="http://learnyouahaskell.com/syntax-in-functions">
-        <link rel="next" href="http://learnyouahaskell.com/higher-order-functions">
-<link type="text/css" rel="stylesheet" href="./recursion_files/SyntaxHighlighter.css">
-<link href="http://learnyouahaskell.com/rss.php" rel="alternate" type="application/rss+xml" title="Learn You a Haskell for Great Good! feed">
+<link rel="shortcut icon" href="./favicon.png" type="image/png">
+        <link rel="prev" href="./syntax-in-functions">
+        <link rel="next" href="./higher-order-functions">
+<link type="text/css" rel="stylesheet" href="./files/SyntaxHighlighter.css">
 <body class="introcontent">
 <div class="bgwrapper">
     <div id="content">
                 <div class="footdiv" style="margin-bottom:25px;">
                 <ul>
                     <li style="text-align:left">
-                                                        <a href="http://learnyouahaskell.com/syntax-in-functions" class="prevlink">Syntax in Functions</a>
+                                                        <a href="./syntax-in-functions" class="prevlink">Syntax in Functions</a>
                                             </li>
                     <li style="text-align:center">
-                        <a href="http://learnyouahaskell.com/chapters">Table of contents</a>
+                        <a href="./chapters">Table of contents</a>
                     </li>
                     <li style="text-align:right">
-                                                        <a href="http://learnyouahaskell.com/higher-order-functions" class="nxtlink">Higher Order Functions</a>
+                                                        <a href="./higher-order-functions" class="nxtlink">Higher Order Functions</a>
                                             </li>
                 </ul>
             </div>
@@ -131,13 +129,13 @@ ghci&gt; quicksort "the quick brown fox jumps over the lazy dog"
                 <div class="footdiv">
                 <ul>
                     <li style="text-align:left">
-                                                        <a href="http://learnyouahaskell.com/syntax-in-functions" class="prevlink">Syntax in Functions</a>
+                                                        <a href="./syntax-in-functions" class="prevlink">Syntax in Functions</a>
                                             </li>
                     <li style="text-align:center">
-                        <a href="http://learnyouahaskell.com/chapters">Table of contents</a>
+                        <a href="./chapters">Table of contents</a>
                     </li>
                     <li style="text-align:right">
-                                                        <a href="http://learnyouahaskell.com/higher-order-functions" class="nxtlink">Higher Order Functions</a>
+                                                        <a href="./higher-order-functions" class="nxtlink">Higher Order Functions</a>
                                             </li>
                 </ul>
             </div>
